# pilates_instructor

./: README.md  pyproject.toml
data/: Pilates.csv
src/pilates_instructor/: crew.py  main.py
src/pilates_instructor/config/: agents.yaml  tasks.yaml
