[project]
name = "pilates_instructor"
version = "0.1.0"
description = "pilates_instructor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.0"
]

[project.scripts]
pilates_instructor = "pilates_instructor.main:run"
run_crew = "pilates_instructor.main:run"
train = "pilates_instructor.main:train"
replay = "pilates_instructor.main:replay"
test = "pilates_instructor.main:test"
run_with_trigger = "pilates_instructor.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
